--- a/myCv.html
+++ b/myCv.html
@@ -164,7 +164,7 @@
 
             <section class="experiencia" id="experiencia">
                 <div class="titulos">
-                    <h2>Experiencia</h2>
+                    <h2 class="titulo-experiencia">Experiencia</h2>
                     <p>Durante mi vida laobral he logrado acumular experiencia en difernetes ambitos. 
                     <br>Aplicando mis conocimientos de marketing en medios impresos, hasta emprender en mi propia agencia de turismo.
                     <br>Manejando redes sociales, y aventurandome en el mundo IT al que le dedico toda mi pasion y ganar por seguir aprendiendo</p>
