--- a/myCv.html
+++ b/myCv.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="myCss.css">
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="sidebar.css">
-    <title>Henry Alonzo Rodriguez</title>
+    <title>Henry Alonzo | Desarrollo Web</title>
 </head>
 <body>
     
@@ -89,9 +89,11 @@
 
             <section class="home" id="home">
                 <div class="titulo">
+                    <img class="foto-perfil" src="foto-perfil.png" alt="Foto de perfil Henry Alonzo">
+                    <h2 class="hola">
+                        Hola soy
+                    </h2>
                     <h1 class="nombre">
-                        <span>Hola Soy</span>
-                        <br>
                         Henry Alonzo R.
                     </h1>
                     <span class="developer"><h4 class="developer">Web Developer</h4></span>
